// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add background 1`] = `
.emotion-0 {
  background-color: red;
}

<p
  className="emotion-0"
>
  test content
</p>
`;

exports[`should add color 1`] = `
.emotion-0 {
  color: red;
}

<p
  className="emotion-0"
>
  test content
</p>
`;
